welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var hauteur = getMondeHauteur()
  var T=new Array[Color](hauteur)
  for ( i<=1 to hauteur ){
    T(i)=getCouleurSol()
    avance()
  }
}
""" 
  for (i<=1 to hauteur){
    leveBrosse()
    gauche()
    avance()
    droite()
    baisseBrosse()
    for (i<-1 to T.lenght-){
      setCouleurBrosse(T.(i))
      avance()
    }
  }
}"""